# gitlab-cicd-python-wrapper

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  Dockerfile  README.md  mise.toml  pyproject.toml  renovate.json
.github/: renovate-config.js  renovate.json
.github/workflows/: ai-analyze.yaml  build.yaml  daily-release.yml  docker.yaml  merge.yaml  pypi.yaml  renovate.yml
gitlab_cicd_python_wrapper/: __init__.py  _async.py  artifacts.py  cache.py  cli.py  common.py  component.py  environment.py  globals.py  image.py  include.py  job.py  needs.py  pages.py  pipeline.py  release.py  retry.py  rules.py  secrets.py  serialization.py  spec.py  trigger.py  variables.py
scripts/: analyze-pipeline-drift.md  analyze_drift.py
tests/: test_artifacts.py  test_async.py  test_cache.py  test_cli.py  test_common.py  test_component.py  test_environment.py  test_globals.py  test_image.py  test_include.py  test_job.py  test_needs.py  test_pipeline.py  test_release.py  test_retry.py  test_rules.py  test_secrets.py  test_serialization.py  test_spec.py  test_trigger.py  test_variables.py
tests/fixtures/: complex.yml  minimal.yml  with_comments.yml
tests/fixtures/components/: invalid_inputs.yml  multi_input.yml  simple.yml
